--- a/main.styl
+++ b/main.styl
@@ -18,6 +18,12 @@ body
 article
     margin-bottom: 4em
 
+nav
+    margin-top: 1em
+
+#bacon
+    width: 50px
+    height: 50px
 
 footer
     text-align: center
